# componentization

./: .gitignore  MANIFEST.in  Makefile  docker-compose.yml  orange-design.drawio  pyproject.toml  setup.py
src/ns/component/: __init__.py  main.py
src/ns/tdata/: __init__.py  events.py  format.py  integration.proto  rabbit.py
tests/: test_wire_transactions.py
utils/: generate_proto.py  pyproject.py  slugify.py
wire/adapter/: Dockerfile  main.py  requirements.txt  transactions.py
